--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 C:\Users\herte\cp104\ws\InstaLearn\InstaLearnRepo\bot.pickle
 C:\Users\herte\cp104\ws\InstaLearn\InstaLearnRepo\__pycache__
+C:\Users\herte\cp104\ws\InstaLearn\InstaLearnRepo\InstaData.csv
